<resources>
    <string name="app_name">TrackerTimer</string>
    <string name="start">Start</string>
    <string name="stopp">Stopp</string>

    <string name="add_intro">Legg til person</string>
    <string name="name">Navn: </string>
    <string name="age">Fødselsdato: </string>
    <string name="bib">Startnummer: </string>
    <string name="add">Legg til</string>
    <string name="cancel">Avbryt</string>
    <string name="back">Tilbake</string>
    <string name="results">Resultat</string>
    <string name="send">Send til Java</string>

    <string-array name="montharray">
        <item>Januar</item>
        <item>Februar</item>
        <item>Mars</item>
        <item>April</item>
        <item>Mai</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <!--<string name="ipaddress">http://10.0.0.1:3000</string>-->
    <!--<string name="ipaddress">http://85.166.159.139:3000</string>-->
    <string name="ipaddress">http://88.90.37.144:3000</string>
</resources>
