<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_intro"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_marginTop="120dp"/>
    <!--<EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"/>-->
    <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"/>
    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"/>
    <Spinner
        android:id="@+id/year_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bib"
        android:layout_marginTop="260dp"/>
    <EditText
        android:id="@+id/bib"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="280dp"/>
    <TextView
        android:id="@+id/starttidtekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Starttid etter start i sekunder:"
        android:layout_marginStart="150dp"
        android:layout_marginTop="260dp"/>
    <EditText
        android:id="@+id/starttid"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginStart="150dp"
        android:layout_marginTop="280dp"/>
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/add"/>
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginStart="100dp"
        android:text="@string/cancel"/>

</RelativeLayout>